[package]
name = "hc256"
version = "0.1.6"
authors = ["quininer kel <quininer@live.com>"]
description = "A implementation of HC-256 stream cipher. support `no_std` environment."
repository = "https://github.com/Tyzzer/hc256"
license = "MIT"

[dependencies]
byteorder = { version = "1.0", default-features = false }
